# sensors

./: .gitignore  CHANGELOG.md  LICENSE  README.md  monitor.json  sensors.cabal
cmd/sensors-dump/: Main.hs
cmd/sensors-hs/: Main.hs
src/System/: Sensors.hs
src/System/Sensors/: LmSensors.hs  Monitor.hs  NvidiaSMI.hs  Utils.hs  Xmobar.hs
src/System/Sensors/Internal/: LmSensors.hs
src/System/Sensors/Internal/NvidiaSMI/: Parser.hs  Process.hs
src/System/Sensors/LmSensors/: Types.hs
src/System/Sensors/NvidiaSMI/: Types.hs
