cabal-version:   3.0
name:            sensors
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
maintainer:      yume@yumechi.jp
author:          eternal-flame-AD
homepage:        https://github.com/eternal-flame-AD/sensors
synopsis:        Reading hardware sensors on your platform.
description:
    This library provides a way to read hardware sensors on your platform.
    We currently support lm_sensors and nvidia-smi as backends.

category:        System
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/eternal-flame-AD/sensors

flag lm_sensors
    description: Use lm_sensors library

flag lm_sensors_static
    description: Use lm_sensors static library
    default:     False

flag nvidia_smi
    description: Use nvidia-smi command backend
    default:     True

flag xmobar
    description: Build xmobar plugin
    default:     False

library
    exposed-modules:  System.Sensors,
                      System.Sensors.Monitor,
                      System.Sensors.Utils
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.12 && <5,
        data-default ^>=0.7,
        aeson ^>=2.2

    if (flag(lm_sensors) || flag(lm_sensors_static))
        exposed-modules:
            System.Sensors.LmSensors
            System.Sensors.LmSensors.Types

        other-modules:   System.Sensors.Internal.LmSensors
        ghc-options:     -optP-DUSE_LM_SENSORS

    if flag(lm_sensors)
        extra-libraries: sensors

    if flag(lm_sensors_static)
        extra-libraries: sensors_static

    if flag(nvidia_smi)
        exposed-modules:
            System.Sensors.NvidiaSMI
            System.Sensors.NvidiaSMI.Types

        ghc-options:     -optP-DUSE_NVIDIA_SMI
        other-modules:
            System.Sensors.Internal.NvidiaSMI.Process
            System.Sensors.Internal.NvidiaSMI.Parser

        build-depends:   process ^>=1.6
    
    if flag(xmobar)
        exposed-modules:
            System.Sensors.Xmobar
        
        build-depends :  xmobar >=0.44

executable sensors-hs
    main-is:          Main.hs
    hs-source-dirs:   cmd/sensors-hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.12 && <5,
        data-default ^>=0.7,
        optparse-applicative ^>=0.18,
        aeson ^>=2.2,
        bytestring ^>=0.12,
        sensors

    if (flag(lm_sensors) || flag(lm_sensors_static))
        ghc-options: -optP-DUSE_LM_SENSORS

    if flag(nvidia_smi)
        ghc-options: -optP-DUSE_NVIDIA_SMI

    if flag(xmobar)
        ghc-options: -optP-DUSE_XMOBAR